--- a/src/app/components/dashboard/project-creator/progress-bar/progress-bar.css
+++ b/src/app/components/dashboard/project-creator/progress-bar/progress-bar.css
@@ -15,7 +15,7 @@
 }
 
 .indexedStep.accomplished {
-  background-color: #00adb5;
+  background-color: #4b5c78;
   color: white;
   border-style: none;
 }
@@ -61,7 +61,7 @@
   top: 0;
   bottom: 0;
   border-radius: 10px;
-  background: #00adb5;
+  background: #4b5c78;
   z-index: -1;
 }
 
